# dockan

./: .gitignore  Dockerfile  build.sh  celerybeat-schedule.db  docker-compose.yml  manage.py  pyproject.toml  pytest.ini  requirements.txt
apps/cart/: admin.py  models.py  serializers.py  urls.py  views.py
apps/cart/migrations/: 0001_initial.py  0002_alter_order_shipping_address.py  0003_offcode.py  0004_alter_offcode_expiration_date.py  0005_alter_offcode_expiration_date.py  0006_alter_offcode_expiration_date.py  0007_discountcode_delete_offcode.py  0008_cartitem_product_type.py  0009_alter_order_shipping_address_delete_shippingaddress.py  0010_cart_discount_alter_discountcode_code_and_more.py  0011_alter_discountcode_percent_alter_discountcode_title.py  (+8 more)
apps/products/: admin.py  forms.py  models.py
apps/shop/: admin.py  apps.py  middleware.py  models.py  signals.py  tasks.py  tests.py  urls.py  views.py
apps/staff/: urls.py  views.py
apps/users/: admin.py  apps.py  forms.py  models.py  serializer.py  signals.py  urls.py  views.py
config/: asgi.py  celery.py  urls.py  wsgi.py
config/django/: celery_config.py
config/settings/: __init__.py  base.py  local.py  production.py
config/utils/: redis.py
requirements/: requirements.txt
staticfiles/css/: bootstrap.rtl.css
templates/: footer.html  head.html  navbar.html
templates/includes/: footer.html  head.html  logo.html  navbar.html  sr-only.html
templates/shop/: detail_old.html
tests/: test_users.py
theme/static_src/: package-lock.json  tailwind.config.js
theme/templates/: base.html
(+114 files in other folders)
