[tool.poetry]
name = "dockan"
version = "0.1.0"
description = ""
authors = ["enayatullah rezaie <enayatulla@enayatullahs-MacBook-Air.local>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.2"
celery = "^5.5.3"
cookiecutter = "^2.6.0"
dj-database-url = "^3.0.0"
dj-rest-auth = "^7.0.1"
django-allauth = "^65.9.0"
django-browser-reload = "^1.18.0"
django-celery-beat = "^2.8.1"
django-ckeditor = "^6.7.2"
django-cleanup = "^9.0.0"
django-cors-headers = "^4.7.0"
django-filter = "^25.1"
django-tailwind = "^4.0.1"
djangorestframework = "^3.16.0"
djangorestframework-jwt = "^1.11.0"
djangorestframework-simplejwt = "^5.5.0"
gunicorn = "^23.0.0"
pillow = "^11.2.1"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
redis = "^6.2.0"
requests = "^2.32.3"
whitenoise = "^6.9.0"
uvicorn = "^0.34.3"
django-admin-interface = "^0.30.0"
django-mptt = "^0.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
